--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Nov 25 2021 09:51:33 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Nov 25 2021 10:25:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="619c3dfcf650fa45d6c3915b" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -55,7 +55,6 @@
     </div>
     <div id="w-node-af6b3c05-1a56-9997-e00c-ca32e613edb2-d6c3915b" class="profile-wrapper"><img src="images/matthew-p-500.png" loading="lazy" width="60" sizes="60px" srcset="images/matthew-p-500-p-500.png 500w, images/matthew-p-500.png 775w" alt="" class="image"></div>
     <div id="w-node-b3f8fae8-b2b2-649e-95f3-b88f10a734e4-d6c3915b" class="_3d-human-widget-wrapper long">
-      <div class="step-text">Step 1</div>
       <div class="directions">
         <h1 class="selected-part-name">Select a body part</h1>
         <h1 class="part-name">Hovered part</h1>
@@ -3111,7 +3110,6 @@
           </div>
         </li>
       </ol>
-      <div class="step-text _3">Step 3</div>
     </div>
     <div id="w-node-_5da85a94-9579-637c-09f2-7cb0da371976-d6c3915b" class="selected-symptoms-widget-wrapper bottom">
       <div class="widget-title-div">
@@ -3125,28 +3123,27 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-d6c3915b" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-	<a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="index.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
         <a href="#" class="submit-entry-button w-button">Submit entry</a>
       </div>
-      <div class="step-text _2">Step 2</div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-d6c3915b" class="nav-wrapper">
-      <a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a data-w-id="3821abbf-b962-d39f-49b6-211c02815d11" href="http://../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
-        <div class="tab-label">Goals</div>
-      </a>
-      <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
-        <div class="tab-label">Insights</div>
-      </a>
-      <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+      <a href="index.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
-      <a href="../profile.html" class="nav-buttons w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon" class ="last">
+      <a href="http://../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+        <div class="tab-label">Goals</div>
+      </a>
+      <a href="http://../insights.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
+        <div class="tab-label">Insights</div>
+      </a>
+      <a href="http://../profile.html" class="nav-buttons last w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
     </div>
