--- a/profileinfo.html
+++ b/profileinfo.html
@@ -28,6 +28,7 @@
         <div class = "mycontent" id = "myslide">
             <div class="writeup">
             <label class = "title">Personal Information</label>
+            <label class = "summary">Please fill out the fields below to help us personalize your experience</label>
             
             <div class = "form-container">
               <div class="form-inner">
@@ -81,6 +82,7 @@
           </div>
           <div class = "writeup">
             <label class = "title">Medical Information</label>
+              <label class = "summary">Please select any pre-existing medical conditions,chronic ilnesses and allergies that you may have</label>
                 <div class="multi-selector">
 
      <div class="select-field">
