--- a/insight.html
+++ b/insight.html
@@ -16,7 +16,7 @@
     <div class = "contentwrap">
 	<div class = "wrapper" id = "profileinfo">
 		<div class ="profile">
-			<div class = "username">Insights and Correlations</div>
+			<div class = "username">Insights & Correlations</div>
 			
 		</div>
 
