--- a/homepage.html
+++ b/homepage.html
@@ -81,7 +81,7 @@
 					<img  class = "pic"src="up.png" width="30px" height="30px">
 				</div>
 				<div class = "illu">
-					<img  class = "pic"src="sleep.png" width="30px" height="30px">
+					<img  class = "pic"src="sleep2.png" width="30px" height="30px">
 				</div>
 				
 				<div class = "para">
@@ -98,7 +98,7 @@
 					<img  class = "pic"src="up.png" width="30px" height="30px">
 				</div>
 				<div class = "illu">
-					<img  class = "pic"src="gym.png" width="30px" height="30px">
+					<img  class = "pic"src="fitness.png" width="30px" height="30px">
 				</div>
 				<div class = "para">
 				<label class = "title">Exercise</label>
