--- a/insight.html
+++ b/insight.html
@@ -46,7 +46,7 @@
 				<img class="pic" src="up.png" width="30px" height="30px">
 			</div>
 			<div class="illu">
-				<img class="pic" src="sleep.png" width="30px" height="30px">
+				<img class="pic" src="sleep2.png" width="30px" height="30px">
 			</div>
 			
 			<div class="para">
@@ -63,7 +63,7 @@
 				<img class="pic" src="up.png" width="30px" height="30px">
 			</div>
 			<div class="illu">
-				<img class="pic" src="exercise.png" width="30px" height="30px">
+				<img class="pic" src="fitness.png" width="30px" height="30px">
 			</div>
 			
 			<div class="para">
