--- a/experiments.html
+++ b/experiments.html
@@ -27,7 +27,7 @@
 
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
-		<div id = "experiment-title" class = "title" style = "width:100%">Log Entries</label>
+		<div id = "experiment-title" class = "title" style = "width:100%">Eating less gluten</label>
 		<br>
 		<br>
 		<label class = "profilename">Review the most recent entries of your symptoms to gain new insights</label>
@@ -113,15 +113,12 @@
 			<br>
 			<br>
 
-			<div class = "wrapper" id = "goals">
-                <label class = "title">Correlation</label>
-                <div id = "changer2">
-                 <div class="empty-insight">
-               </div>
-               </div>
-               
-                   
-           </div>
+		<div class = "wrapper" id = "goals">
+            <label class = "title">Correlation</label>
+            <div id = "changer2">
+            <div class="empty-insight">
+
+        </div>
 			
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">View more insights</a><br/>
