--- a/experiments.html
+++ b/experiments.html
@@ -27,63 +27,12 @@
 
 	<div class = contentwrap>
 	<div class = "wrapper" id = "checkup">
-		<div id = "experiment-title" class = "title" style = "width:100%">Eating less gluten</label>
+		<div id = "experiment-title" class = "title" style = "width:100%">Eating less gluten</div>
 		<br>
 		<br>
 		<label class = "profilename">Review the most recent entries of your symptoms to gain new insights</label>
 		<br> 
 
-		<div class= "multi-selector">
-		<div class = "select-field">
-			<label class = "summary" style = "color:red">Click on a date to see entry information</label>
-				 </div>
-			<!---------List of checkboxes and options----------->
-				 <div class = "list" style = "overflow-y:scroll;height: 300px;">
-				   <label class = "title"></label>
-			
-				   <label id = "1" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						September 1st 2021 
-				</label>
-			
-				  <label id = "2" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">  
-						September 9th 2021
-				  </label>
-			
-				   <label id = "3" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						September 25th 2021  
-				 </label>
-			
-				 <label class = "title"></label>
-					   <label id = "4" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						October 3rd 2021
-				 </label>
-			
-				   <label id = "5" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						October 12th 2021
-				 </label>
-			
-				 <label id = "6" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						October 20th 2021
-				 </label>
-			
-				 <label id = "7" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						November 1st 2021
-				</label>
-			
-				<label id = "8" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						November 2nd 2021
-				</label>
-			
-				<label id = "9" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						November 3rd 2021
-				</label>
-			
-				<label id = "10" class = "task" onclick = "select(this.id);" style = "padding-top:5px; padding-bottom:5px">
-						November 4th 2021
-				</label>
-				 
-			</div>
-		</div>
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">See all entries</a><br/>
 
