--- a/experiments.html
+++ b/experiments.html
@@ -57,6 +57,8 @@
                 <img class="logo" src="1.png" width = "200px">
             </div>
     </div>
+    </div>
+    </div>
 
 
 <div class = "contentwrap">
