--- a/experiments.html
+++ b/experiments.html
@@ -43,7 +43,7 @@
 
 	
 	<div class = contentwrap>
-        <div class = "wrapper" id = "checkup">
+        <div class = "wrapper" id = "checkup" style = "top:-11px">
             <div id = "experiment-title" class = "title" style = "width:100%">Eating less gluten</div>
             <br>
             <br>
