--- a/experiments.html
+++ b/experiments.html
@@ -34,7 +34,7 @@
 		<br> 
 
 		
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='loghistory.html';" id="log">Consult doctor</a><br/>
+		<a class= "gradient-button gradient-button-2" style = "background-color:red" onclick = "location.href='loghistory.html';" id="log">Consult doctor</a><br/>
 
 		<div class = "avatar">
 			<img class="logo" src="1.png" width = "200px">
