--- a/experiments.html
+++ b/experiments.html
@@ -67,8 +67,12 @@
 			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:43%; left:20px; top:170px" onclick = "location.href='loghistory.html';" id="log">Generate new experiment</a><br/>
     		<a class= "gradient-button gradient-button-2" style = "width:43%; left:290px; top:170px" onclick = "location.href='loghistory.html';" id="log">Add experiment to goals</a><br/>
 
-			<div class = "avatar" style = "left:450px; top:10px">
-				<img class="logo" src="magnifying-glass.png" width = "70px">
+			<div class = "avatar" style = "left:0px; top:0px">
+				<img class="logo" src="Refresh-icon.png" width = "70px">
+			</div>
+
+			<div class = "avatar" style = "left:0px; top:0px">
+				<img class="logo" src="plus.png" width = "70px">
 			</div>
 		</div>
 	</div>
