--- a/experiments.html
+++ b/experiments.html
@@ -64,8 +64,8 @@
 			<br>
 			
 
-			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:43%; left:20px; top:170px" onclick = "location.href='loghistory.html';" id="log">Generate new experiment</a><br/>
-    		<a class= "gradient-button gradient-button-2" style = "width:43%; left:290px; top:170px" onclick = "location.href='loghistory.html';" id="log">Add experiment to goals</a><br/>
+			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:49%; top:170px" onclick = "location.href='loghistory.html';" id="log">Generate new experiment</a><br/>
+    		<a class= "gradient-button gradient-button-2" style = "width:49%; left:270px; top:170px" onclick = "location.href='loghistory.html';" id="log">Add experiment to goals</a><br/>
 
 			<div class = "avatar" style = "left:0px; top:0px">
 				<img class="logo" src="Refresh-icon.png" width = "70px">
