--- a/experiments.html
+++ b/experiments.html
@@ -65,13 +65,13 @@
 			
 
 			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:49%; top:170px" onclick = "location.href='loghistory.html';" id="log">Generate new experiment</a><br/>
-    		<a class= "gradient-button gradient-button-2" style = "width:49%; left:270px; top:170px" onclick = "location.href='loghistory.html';" id="log">Add experiment to goals</a><br/>
+    		<a class= "gradient-button gradient-button-2" style = "width:49%; left:270px; top:170px" onclick = "location.href='loghistory.html';" id="log">Add new experiment</a><br/>
 
 			<div class = "avatar" style = "left:0px; top:0px">
 				<img class="logo" src="Refresh-icon.png" width = "70px">
 			</div>
 
-			<div class = "avatar" style = "left:0px; top:0px">
+			<div class = "avatar" style = "left:50px; top:50px">
 				<img class="logo" src="plus.png" width = "70px">
 			</div>
 		</div>
