--- a/experiments.html
+++ b/experiments.html
@@ -68,11 +68,11 @@
     		<a class= "gradient-button gradient-button-2" style = "width:49%; left:270px; top:170px" onclick = "location.href='loghistory.html';" id="log">Register new experiment</a><br/>
 
 			<div class = "avatar" style = "left:100px; top:100px">
-				<img class="logo" src="refresh.png" width = "70px">
+				<img class="logo" src="refresh.png" width = "120px">
 			</div>
 
 			<div class = "avatar" style = "left:50px; top:100px">
-				<img class="logo" src="plus-sign.png" width = "70px">
+				<img class="logo" src="1.png" width = "70px">
 			</div>
 		</div>
 	</div>
