--- a/experiments.html
+++ b/experiments.html
@@ -72,7 +72,7 @@
 			</div>
 
 			<div class = "avatar" style = "left:50px; top:100px">
-				<img class="logo" src="1.png" width = "70px">
+				<img class="logo" src="plus-sign.png" width = "70px">
 			</div>
 		</div>
 	</div>
