--- a/insight.html
+++ b/insight.html
@@ -191,7 +191,7 @@
    
 	   if(val=="in1"){
 		   changer.innerHTML = "<div id = chart_div></div>";
-		   changer2.innerHTML = "<div class = \"correlation\">There was an upward trend in your sleep time this week<br>We also found that you reported less headaches and stress-related symptopms<br><br>Did you know : Sleeping can increase productivity? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"goals.html\" style=\"width: 95%;\" >Start Experiment</a><br /></div>"
+		   changer2.innerHTML = "<div class = \"correlation\">There was an upward trend in your sleep time this week<br>We also found that you reported less headaches and stress-related symptopms<br><br>Did you know : Sleeping can increase productivity? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 95%;\" >Explore changes</a><br /></div>"
 		   console.log("here");
 	   var data = new google.visualization.DataTable();
 	   data.addColumn('string', 'Day');
