--- a/experiments.html
+++ b/experiments.html
@@ -40,7 +40,7 @@
 		<a class= "gradient-button gradient-button-2" style = "background-color:red" onclick = "location.href='loghistory.html';" id="log">Consult doctor</a><br/>
 
 		<div class = "avatar">
-			<img class="logo" src="1.png" width = "200px">
+			<img class="logo" src="test-tube.png" width = "200px">
 		</div>
 	</div>
 
@@ -56,7 +56,7 @@
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
-				<img class="logo" src="3.png" width = "210px">
+				<img class="logo" src="clock.png" width = "210px">
 			</div>
         </div>
 
