--- a/experiments.html
+++ b/experiments.html
@@ -38,7 +38,9 @@
 		<br>
 
 		<div id = "changer2">
-			<div id = "experiment-description" class = "profilename" style = "width:100%">Increasing sleep time</div>
+			<div class = "empty-insight">
+				<div id = "experiment-description" class = "profilename" style = "width:100%">Increasing sleep time</div>
+			</div>
 		</div>
 
 
