--- a/experiments.html
+++ b/experiments.html
@@ -38,7 +38,7 @@
 		<br>
 
 		<div id = "changer2">
-			<div class = "empty-insight">
+			<div class = "empty-insight" style = "top:200px">
 				<div id = "experiment-description" class = "profilename" style = "width:100%">Increasing sleep time</div>
 			</div>
 		</div>
