--- a/experiments.html
+++ b/experiments.html
@@ -39,7 +39,7 @@
 
 		<div id = "changer2">
 			<div class = "empty-insight" style = "top:200px">
-				<div id = "experiment-description" class = "profilename" style = "width:100%">Increasing sleep time</div>
+				<div id = "experiment-description" class = "profilename" style = "width:100%">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</div>
 			</div>
 		</div>
 
