--- a/experiments.html
+++ b/experiments.html
@@ -37,8 +37,8 @@
 		<br>
 		<br>
 
-		<div id = "changer2">
-			<div class = "empty-insight" style = "top:200px">
+		<div id = "changer2" style = "top:200px">
+			<div class = "empty-insight">
 				<div id = "experiment-description" class = "profilename" style = "width:100%">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</div>
 			</div>
 		</div>
