--- a/experiments.html
+++ b/experiments.html
@@ -75,7 +75,7 @@
 			<br>
 			
 
-			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:49%; top:140px" onclick="refreshExperiment()">Generate new experiment</a><br/>
+			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:49%; top:140px" onclick="refreshExperiment()" id="log">Generate new experiment</a><br/>
     		<a class= "gradient-button gradient-button-2" style = "width:49%; left:270px; top:140px" onclick = "location.href='loghistory.html';" id="log">Register new experiment</a><br/>
 
 			<div class = "avatar" style = "left:-30px; top:130px">
