--- a/experiments.html
+++ b/experiments.html
@@ -63,7 +63,7 @@
 			
 
 
-			<div class = "avatar" style = "top:8px; left:390px">
+			<div class = "avatar" style = "top:8px; left:380px">
 				<img class="logo" src="clock.png" width = "110px">
 			</div>
         </div>
@@ -154,7 +154,7 @@
 	   }
 
 	   
-	   function refreshExperiment(val)
+	   function refreshExperiment()
 	   {
 		    nextTile = (nextTitle + 1) % experimentTitles.length;
 			nextDescription = (nextDescription + 1) % experimentDescriptions.length;
