--- a/experiments.html
+++ b/experiments.html
@@ -148,8 +148,8 @@
 	   
 	   function refreshExperiment()
 	   {
-		    nextTitle = (nextTitle + 1) % 3;
-			nextDescription = (nextDescription + 1) % 3;
+		    nextTitle = (nextTitle + 1) % experimentTitles.length;
+			nextDescription = (nextDescription + 1) % experimentDescriptions.length;
 
 			var experimentTitle = document.getElementById("experiment-title");
 			experimentTitle.innerHTML = experimentTitles[nextTitle];
