--- a/profileinfo.html
+++ b/profileinfo.html
@@ -398,7 +398,7 @@ Shortness of Breath
                l2.className = "active" ;
                l3.className ="";
       }else{
-        window.open("signup.html?#");
+        window.location.href='signup.html?#';
       }
     }
     function proceed(){
