--- a/experiments.html
+++ b/experiments.html
@@ -39,7 +39,7 @@
 
 		<div id = "changer2">
 			<div class = "empty-insight">
-				<div id = "experiment-description" class = "profilename" style = "width:100%; left:100px">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</div>
+				<div id = "experiment-description" class = "profilename" style = "width:100%;"> In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</div>
 			</div>
 		</div>
 
