--- a/experiments.html
+++ b/experiments.html
@@ -39,7 +39,7 @@
 
 		<div id = "changer2">
 			<div class = "empty-insight">
-				<div id = "experiment-description" class = "profilename" style = "width:100%;"> In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</div>
+				<div id = "experiment-description" class = "profilename" style = "width:100%;">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</div>
 			</div>
 		</div>
 
@@ -132,7 +132,7 @@
 
 	var experimentDescriptions = [
 		"In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.",
-		"In this experiment you will try to increase the number of walks you take on average each week to decrease your rsk of heart disease.",
+		" In this experiment you will try to increase the number of walks you take on average each week to decrease your risk of heart disease.",
 		"In this experiment you will try to adopt a keto diet to promote your metabolic health."
 	];
 	var nextDescription = 0;
