--- a/loghistory.html
+++ b/loghistory.html
@@ -239,7 +239,7 @@ autocomplete(document.getElementById("inputEntry"), entries);
 <script>
 
 	function backButton(){
-        window.open("profile.html?#");
+		window.location.href='profile.html?#';
     }
 
 </script>
