--- a/homepage.html
+++ b/homepage.html
@@ -120,7 +120,7 @@
 	
 </div>
 <div class = "contentwrap">
-		<div class = "nav">
+		<div class = "nav-home">
 			<div class="buttonactive">
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
