--- a/profileinfo.html
+++ b/profileinfo.html
@@ -326,7 +326,7 @@ Shortness of Breath
         </div>
     </div>
     <script>
-     var ilnesses  = ["Allergies","Anxiety","Athritis","Asthma","Binge Eating","Breast Cancer","Bulimia","Chest Pain"
+     var ilnesses  = ["Allergies","Anxiety","Athritis","Asthma","Binge Eating","Breast Cancer","Bulimia","Chest Pain",
                      "Chlamydia","Chronic Fatigue Syndrome","Chronic Kidney Disease","Common Cold","Common Heart Conditions","Constipation"," Cough","Cystic Fibrosis","Dehydration","Dementia","Depression","Diarrhoea"," Dry Mouth","Earache","Earwax Build-up","Fever","Food Poisoning","Headaches","High Blood Pressure","High Cholestrol","Hyperglycaemia (High blood sugar)",
                      "Hypoglycaemia (Low blood sugar)","Insomnia","Iron Deficiency Anemia","Kidney Infection","Kidney Stones","Lactose Intolerance","Leg Cramps","Liver Disease"," Menopause","Middle Ear Infection","Migraine","Nosebleed","Obesity","Obsessive Compulsive Disorder (OCD)","Shortness of Breath","Sore Throat","Stomach Ache","Type I Diabetes","Type II Diabetes"];
      var myilnesses = [];
