--- a/loghistory.html
+++ b/loghistory.html
@@ -211,7 +211,7 @@ autocomplete(document.getElementById("inputEntry"), entries);
 
 
 	<div class = "contentwrap">
-		<div class = "nav">
+		<div class = "nav-home">
 			<div class="button" onclick = "location.href='homepage.html';">
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
