--- a/goals.html
+++ b/goals.html
@@ -21,14 +21,18 @@
 	<div class = "wrapper" id = "insights">
 		<label class = "profilename">Insights</label>
 	</div>
-</div>
+	
 	<div class = "contentwrap">
-		<div class = "nav">
+		<div class = "nav-home">
 			<div class="button" onclick = "location.href='homepage.html';">
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
 		    </div>
-			<div class="buttonactive">
+			<div class="button" onclick = "location.href='import/physical-checkup.html';">
+				<div class = "icon"><img src="checkup.png" width = "30px"></div>
+				<label>Checkup</label>
+			</div>
+			<div class="button" onclick = "location.href='goals.html';">
 				<div class = "icon"><img src="goals.png" width = "30px" ></div>
 				<label>Goals</label>
 			</div>
@@ -36,16 +40,13 @@
 				<div class = "icon"><img src="insight.png" width = "30px"></div>
 				<label>Insight</label>
 			</div>
-			<div class="button" onclick = "location.href='import/physical-checkup.html';">
-				<div class = "icon"><img src="checkup.png" width = "30px"></div>
-				<label>Checkup</label>
-			</div>
-			<div class="button" onclick = "location.href='profile.html';">
+			<div class="buttonactive">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
 				<label>Log History</label>
 			</div>
 		</div>
 	</div>
+
 
 </body>
 </html>
