--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,32 @@
 		
 		<br>
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
-		
+		<div class= "multi-selector">
+		<div class = "select-field">
+			<label class = "summary" style = "color:blue">Your most recent entries</label>
+				 </div>
+			<!---------List of checkboxes and options----------->
+				 <div class = "list" style = "height: 200px;">
+				   <label class = "title"></label>
+			
+			
+				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:5px; padding-bottom:5px">
+						November 4th 2021
+				</label>
+			
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
+						November 3rd 2021
+				</label>
+			
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
+						November 2nd 2021
+				</label>
+				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
+						October 28th
+				</label>
+				 
+			</div>
+		</div>
 		
 		<a class="gradient-button gradient-button-2" href ="#" id="log">Log your symptoms</a><br />
 		<div class = "avatar">
