--- a/homepage.html
+++ b/homepage.html
@@ -34,6 +34,10 @@
 		
 		<br>
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
+		<br>
+		<br>
+		<br>
+		<br>
 		<div class= "multi-selector">
 		<div class = "select-field">
 			<label class = "summary" style = "color:blue">Your most recent entries</label>
@@ -55,7 +59,7 @@
 						November 2nd 2021
 				</label>
 				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
-						October 28th
+						October 28th 2021
 				</label>
 				 
 			</div>
