--- a/homepage.html
+++ b/homepage.html
@@ -34,10 +34,6 @@
 		
 		<br>
 		<label class = "summary" >“Amazing great awesome<br> motivational quote here”</label>
-		<br>
-		<br>
-		<br>
-		<br>
 		<div class= "multi-selector">
 		<div class = "select-field">
 			<label class = "summary" style = "color:blue">Your most recent entries</label>
@@ -47,18 +43,24 @@
 				   <label class = "title"></label>
 			
 			
-				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:5px; padding-bottom:5px">
+				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:10px; padding-bottom:10px">
 						November 4th 2021
 				</label>
 			
-				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
 						November 3rd 2021
 				</label>
 			
-				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
 						November 2nd 2021
 				</label>
-				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:5px; padding-bottom:5px">
+				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
+						October 28th 2021
+				</label>
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
+						October 27th 2021
+				</label>
+				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
 						October 28th 2021
 				</label>
 				 
