--- a/insight.html
+++ b/insight.html
@@ -126,7 +126,7 @@
 	
 </div>
 <div class = "contentwrap">
-		<div class = "nav">
+		<div class = "nav-home">
 			<div class="button" onclick = "location.href='homepage.html';">
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
