--- a/experiments.html
+++ b/experiments.html
@@ -38,7 +38,7 @@
 		<br>
 
 		<div id = "changer2">
-			<div class = "empty-insight"">
+			<div class = "empty-insight">
 				<p id = "experiment-description" class = "profilename" style = "width:100%; left:5px">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</p>
 			</div>
 		</div>
