--- a/homepage.html
+++ b/homepage.html
@@ -49,17 +49,29 @@
 			
 				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:10px; padding-bottom:10px">
 						November 4th 2021
+						<label class "type-of-log">
+							physical
+						</label>
 				</label>
 			
 				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
 						November 3rd 2021
+						<label class "type-of-log">
+							physical
+						</label>
 				</label>
 			
 				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
 						November 2nd 2021
+						<label class "type-of-log">
+							physical
+						</label>
 				</label>
 				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
-						October 28th 2021
+						November 1st 2021
+						<label class "type-of-log">
+							physical
+						</label>
 				</label>
 				 
 			</div>
