--- a/experiments.html
+++ b/experiments.html
@@ -39,7 +39,7 @@
 
 		<div id = "changer2">
 			<div class = "empty-insight">
-				<p id = "experiment-description" class = "profilename" style = "width:100%; left:5px">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</p>
+				<p id = "experiment-description" class = "profilename" style = "width:100%; position:relative; left:5px">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</p>
 			</div>
 		</div>
 
