--- a/homepage.html
+++ b/homepage.html
@@ -33,7 +33,7 @@
 		<label class = "title" width="100%">How do you feel today?</label>
 		
 		<br>
-		<label class = "summary" style = "padding-right: 30px;">““The human body has been designed to resist an infinite number of changes and attacks brought about by its environment. The secret of good health lies in successful adjustment to changing stresses on the body.” – Harry J. Johnson”;</label>
+		<label class = "summary" style = "width: 40px;">““The human body has been designed to resist an infinite number of changes and attacks brought about by its environment. The secret of good health lies in successful adjustment to changing stresses on the body.” – Harry J. Johnson”;</label>
 		<br>
 		<br>
 		<br>
@@ -49,7 +49,7 @@
 			
 				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:10px; padding-bottom:10px">
 						November 4th 2021
-						<label class "type-of-log">
+						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
