--- a/homepage.html
+++ b/homepage.html
@@ -130,7 +130,7 @@
 				<label class = "summary" width="40%">0.7% - 1.5hr</label>
 				 </div>
 				 <div class = "diagram">
-			  
+			                 <img class = "pic" src = "chart1.png" width = "70px"> 
 				 </div>
 			</div>
 			<hr>
@@ -146,7 +146,7 @@
 				<label class = "summary" width="40%">0.8% - 13min</label>
 			</div>
 				<div class = "diagram">
-					 
+					<img class = "pic" src = "chart1.png" width = "70px"> 
 				 </div>
 			</div>
 			
