--- a/homepage.html
+++ b/homepage.html
@@ -48,27 +48,27 @@
 			
 			
 				<label  class = "task" onclick = "location.href ='profile.html';"style = "padding-top:10px; padding-bottom:10px">
-						November 4th 2021
+						November 9th 2021
 						<label class = "type-of-log">
-							physical
+							mental
 						</label>
 				</label>
 			
 				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
-						November 3rd 2021
+						November 8th 2021
 						<label class ="type-of-log">
 							physical
 						</label>
 				</label>
 			
 				<label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
-						November 2nd 2021
+						November 6th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
 				</label>
 				 <label  class = "task" onclick = "location.href ='profile.html';" style = "padding-top:10px; padding-bottom:10px">
-						November 1st 2021
+						November 7th 2021
 						<label class = "type-of-log">
 							physical
 						</label>
