--- a/experiments.html
+++ b/experiments.html
@@ -45,7 +45,7 @@
 
 
 		
-		<a class= "gradient-button gradient-button-2" style = "background-color:red" onclick = "location.href='loghistory.html';" id="log">Consult doctor</a><br/>
+		<a class= "gradient-button gradient-button-2" style = "background-color:red" onclick = "consultDoctor()" id="log">Consult doctor</a><br/>
 
 		<div class = "avatar" style = "top:-1px; left:390px">
 			<img class="logo" src="test-tube.png" width = "110px">
@@ -76,7 +76,7 @@
 			
 
 			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:49%; top:140px" onclick="refreshExperiment()" id="log">Generate new experiment</a><br/>
-    		<a class= "gradient-button gradient-button-2" style = "width:49%; left:265px; top:140px" onclick = "location.href='loghistory.html';" id="log">Register new experiment</a><br/>
+    		<a class= "gradient-button gradient-button-2" style = "width:49%; left:265px; top:140px" onclick = "confirmExperiment()" id="log">Register new experiment</a><br/>
 
 			<div class = "avatar" style = "left:-30px; top:130px">
 				<img class="logo" src="refresh.png" width = "120px">
@@ -161,6 +161,14 @@
 		function backButton(){
         	window.open("insight.html?#");
     	}
+
+		function confirmExperiment(){
+			alert("You have successfully registered for this experiment!");
+		}
+
+		function consultDoctor(){
+			alert("Your doctor has been notified.");
+		}
 
 	</script>
 </body>
